--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^7.12.0",
     "react-router-dom": "^6.30.3",
     "socket.io-client": "^4.8.3",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
